# railway

./: .gitignore
containerManager/backend/: package.json  tsconfig.json
containerManager/backend/src/: index.ts
containerManager/backend/src/routes/: container.ts
containerManager/backend/src/services/: railwayService.ts
containerManager/backend/src/types/: railway.ts
containerManager/frontend/app/: page.tsx
containerManager/frontend/components/: ContainerToggleCard.tsx  DashboardHeader.tsx  DeploymentActions.tsx  ProjectCard.tsx  ProjectList.tsx  ServiceItem.tsx  ServiceList.tsx
containerManager/frontend/components/ui/: EmptyState.tsx  ErrorAlert.tsx  LoadingSpinner.tsx
containerManager/frontend/hooks/: useRailwayApi.ts
containerManager/frontend/types/: railway.ts
discordBackend/: README.md  main.py  pyproject.toml
discordBackend/app/: __init__.py  application.py  config.py  database.py  discord_bot.py  logging.py  models.py  websocket_manager.py
discordBackend/app/api/: routes.py
discordfrontend/: package.json
discordfrontend/src/app/: page.tsx
discordfrontend/src/components/discord/: ConnectionHeader.tsx  ErrorAlert.tsx  MessageItem.tsx  MessageList.tsx
discordfrontend/src/hooks/: useConnectionStats.ts  useMessages.ts  useWebSocket.ts
discordfrontend/src/types/: discord.ts
